--- a/develop/blocks/account-nav/account-nav.scss
+++ b/develop/blocks/account-nav/account-nav.scss
@@ -124,6 +124,7 @@
         &__list {
             display: block;
             border: none;
+            margin-top: 0;
         }
 
         &__item {
