--- a/develop/scss/variables.scss
+++ b/develop/scss/variables.scss
@@ -17,6 +17,7 @@ $text-color-white: #fff;
 
 $green: #5fce67;
 $red: #ff2b2b;
+$blue: #3F76FE;
 
 @mixin btn-theme($themecolor: $themecolor) {
     position: relative;
