added news empty block

--- a/develop/blocks/account-news/account-news.pug
+++ b/develop/blocks/account-news/account-news.pug
@@ -2,21 +2,24 @@ mixin account-news()
     +b.SECTION.account-news
         +e.column
             +e.H2.column-title Новости ваших фондов
-            +e.block
-                +e.TIME.date(datetime='2020-10-16') 16 октября, 2020
-                +e.card
-                    +news-card('Активо один', 'Таки предлагаем убрать этот раздел и сделать вместо него ленту новостей по объектам.')
-                +e.card
-                    +news-card('Активо пятнадцать', 'Таки предлагаем убрать этот раздел и сделать вместо него ленту новостей по объектам.')
-            +e.block
-                +e.TIME.date(datetime='2020-10-15') 15 октября, 2020
-                +e.card
-                    +news-card('Активо шесть', 'Таки предлагаем убрать этот раздел и сделать вместо него ленту новостей по объектам. Таки предлагаем убрать этот раздел и сделать вместо него ленту новостей по объектам. ')
-                +e.card
-                    +news-card('Активо пятнадцать', 'Таки предлагаем убрать этот раздел и сделать вместо него ленту новостей по объектам.<br>', true)
-                +e.card
-                    +news-card('Активо пятнадцать', 'Таки предлагаем убрать этот раздел и сделать вместо него ленту новостей по объектам.', true)
-            +e.BUTTON.load(type='button') Еще 10 новостей
+            +e.empty
+                +e.empty-title У вас пока нет приобритенных фондов :(
+                +e.A.empty-link.btn(href='#') Выбрать
+            //- +e.block
+            //-     +e.TIME.date(datetime='2020-10-16') 16 октября, 2020
+            //-     +e.card
+            //-         +news-card('Активо один', 'Таки предлагаем убрать этот раздел и сделать вместо него ленту новостей по объектам.')
+            //-     +e.card
+            //-         +news-card('Активо пятнадцать', 'Таки предлагаем убрать этот раздел и сделать вместо него ленту новостей по объектам.')
+            //- +e.block
+            //-     +e.TIME.date(datetime='2020-10-15') 15 октября, 2020
+            //-     +e.card
+            //-         +news-card('Активо шесть', 'Таки предлагаем убрать этот раздел и сделать вместо него ленту новостей по объектам. Таки предлагаем убрать этот раздел и сделать вместо него ленту новостей по объектам. ')
+            //-     +e.card
+            //-         +news-card('Активо пятнадцать', 'Таки предлагаем убрать этот раздел и сделать вместо него ленту новостей по объектам.<br>', true)
+            //-     +e.card
+            //-         +news-card('Активо пятнадцать', 'Таки предлагаем убрать этот раздел и сделать вместо него ленту новостей по объектам.', true)
+            //- +e.BUTTON.load(type='button') Еще 10 новостей
         +e.column
             +e.H2.column-title События Активо
             +e.block
