--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1878,6 +1878,21 @@ th {
 .account-news__block {
   margin-bottom: 32px; }
 
+.account-news__empty {
+  max-width: 360px;
+  padding: 24px;
+  text-align: center;
+  border: 1px solid #fed63f;
+  border-radius: 8px; }
+
+.account-news__empty-title {
+  margin-bottom: 20px;
+  font-size: 18px;
+  font-weight: 600; }
+
+.account-news__empty-link.btn {
+  font-size: 16px; }
+
 .account-news__card {
   margin-bottom: 16px; }
   .account-news__card:last-child {
@@ -1925,7 +1940,9 @@ th {
           padding: 0 12px; }
     .account-news__column-title {
       margin-bottom: 32px;
-      font-size: 18px; } }
+      font-size: 18px; }
+    .account-news__empty {
+      padding: 56px 24px; } }
 
 .modal .account-settings .modal__dialog {
   padding: 0;
