--- a/develop/blocks/account-settings/account-settings.scss
+++ b/develop/blocks/account-settings/account-settings.scss
@@ -112,17 +112,19 @@
                 font-size: 30px;
             }
 
+            &__form {
+                position: relative;
+                display: flex;
+                align-items: flex-start;
+                padding: 30px 0 0;
+            }
+
             &__action {
                 padding: 0;
                 position: absolute;
                 margin-top: -12px;
                 right: 60px;
-            }
-
-            &__form {
-                display: flex;
-                align-items: flex-start;
-                padding: 0;
+                top: -50px;
             }
 
             &__data {
