--- a/develop/blocks/authorization/authorization.pug
+++ b/develop/blocks/authorization/authorization.pug
@@ -7,7 +7,7 @@ mixin authorization()
             +e.logged
                 +e.A.inner-link(href='#' title='Документы')
                     +icon('bubble')
-                +e.A.inner-link.__settings(href='#' title='Настройки')
+                +e.A.inner-link(href='./account-page-6.html' title='Настройки')
                     +icon('settings')
                 +e.A.account(href='#' title='admin@aktivo.ru') 
                     span admin@aktivo.ru
