--- a/develop/jade/account-page-3.pug
+++ b/develop/jade/account-page-3.pug
@@ -10,7 +10,7 @@ html(lang='ru')
         +main-header
         +account-layout
             +account-news
-        +account-settings
+        //- +account-settings-modal
         +main-footer
             +lines
         +doc-footer
