--- a/develop/jade/account-page-6.pug
+++ b/develop/jade/account-page-6.pug
@@ -9,7 +9,7 @@ html(lang='ru')
     body
         +main-header
         +account-layout
-            +account-documents
+            +account-settings
         //- +account-settings-modal
         +main-footer
             +lines
