--- a/develop/blocks/partner-links/partner-links.scss
+++ b/develop/blocks/partner-links/partner-links.scss
@@ -1,15 +1,201 @@
 .partner-links {
+    &__add {
+        @include btn-reset;
+        position: relative;
+        height: 50px;
+        width: 100%;
+        padding-left: 20px;
 
+        font-size: 14px;
+        font-weight: 600;
+        text-align: left;
+        text-decoration: none;
+
+        background-color: $theme-color;
+
+        transition: opacity 300ms ease;
+
+        &:hover,
+        &:active,
+        &:focus {
+            opacity: 0.6;
+        }
+
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            width: 9px;
+            height: 1px;
+            left: 7px;
+            top: 50%;
+            transform: translateY(-50%);
+
+            background-color: currentColor;
+        }
+
+        &::after {
+            transform: translateY(-50%) rotate(90deg);
+        }
+    }
+
+    &__block {
+        transition: background-color 300ms ease;
+
+        &.active {
+            background-color: #fcfcfc;
+        }
+    }
+
+    &__header {
+        position: relative;
+        padding: 20px;
+
+        font-size: 12px;
+        font-weight: 600;
+        color: $blue;
+        display: flex;
+
+        &.active {
+            &::before {
+                transform: translateY(20%) rotate(225deg);
+            }
+        }
+
+        input {
+            width: 100%;
+            padding: 0;
+            border: none;
+            appearance: none;
+            background-color: transparent;
+
+            outline-color: $blue;
+        }
+
+        .copy {
+            @include btn-reset;
+            position: relative;
+            width: 16px;
+            height: 16px;
+
+            svg {
+                position: absolute;
+                width: 8px;
+                height: 10px;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+
+                fill: currentColor;
+            }
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 8px;
+            margin-top: -2px;
+
+            border: solid currentColor;
+            border-width: 0 1px 1px 0;
+            padding: 3px;
+            transform: translateY(-50%) rotate(45deg);
+
+            transition: transform 300ms ease;
+        }
+    }
+
+    &__content {
+        display: none;
+        padding: 0 20px 32px;
+    }
+
+    &__data {
+        margin-bottom: 15px;
+        display: flex;
+        flex-flow: row wrap;
+        margin-bottom: -16px;
+    }
+
+    &__data-block {
+        margin-right: 20px;
+        margin-bottom: 16px;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+
+    &__data-title {
+        margin: 0 0 4px;
+
+        font-size: 12px;
+        color: #696969;
+        line-height: 1.4;
+    }
+
+    &__data-value {
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 1.6;
+    }
+
+    &__form {
+        padding-top: 18px;
+    }
+
+    &__input {
+        margin-bottom: 24px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
 }
 
 @media #{$tablet} {
     .partner-links {
-        
+        &__add {
+            position: relative;
+            z-index: 1;
+            padding-left: 48px;
+
+            &::before,
+            &::after {
+                left: 16px;
+                width: 18px;
+            }
+        }
+
+        &__header {
+            padding-left: 48px;
+
+            font-size: 14px;
+
+            &::before {
+                padding: 5px;
+                left: 20px;
+                margin-top: -3px;
+            }
+
+            .copy {
+                svg {
+                    width: 10px;
+                    height: 10px;
+                }
+            }
+        }
+
+        &__content {
+            padding-left: 48px;
+            padding-right: 40px;
+            padding-bottom: 48px;
+        }
     }
 }
 
 @media #{$desktop} {
     .partner-links {
-
     }
 }
