--- a/develop/blocks/account-partner/account-partner.pug
+++ b/develop/blocks/account-partner/account-partner.pug
@@ -25,3 +25,5 @@ mixin account-partner()
                 +partner-links
             +e.col
                 +partner-friends
+        +e.table
+            +partner-table
