--- a/develop/blocks/partner-friends/partner-friends.scss
+++ b/develop/blocks/partner-friends/partner-friends.scss
@@ -42,6 +42,8 @@
     &__block {
         transition: background-color 300ms ease;
 
+        border-bottom: 1px solid #f6f6f6;
+
         &.active {
             background-color: #fcfcfc;
         }
@@ -214,7 +216,6 @@
                 height: 14px;
             }
         }
-        
     }
 }
 
